[metadata]
name = loadutils
version = attr: loadutils.__version__
description = Helpful functions to list, iterate through and classify files and directories for Python 3
long_description = ""
author = Francois Nadeau
author_email = francois.nadeau.1@umontreal.ca
maintainer = Francois Nadeau
maintainer_email = francois.nadeau.1@umontreal.ca
url = https://github.com/FrancoisNadeau/loadutils
license = MIT
keywords = loading, files, sorting
project_urls =
    Documentation = https://docs.google.com/presentation/d/1BI7jIQGiV0lK_qb9qyL6B5GP4v5QLX9ubBFBavoe3ws/edit?usp=sharing
    GitHub Project = https://github.com/FrancoisNadeau/loadutils
classifiers =
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Programming Language :: Python :: 3,

[options]
python_requires = >=3.6
packages = find:

[tool:pytest]
addopts = -v
norecursedirs = *
